--- a/Index.html
+++ b/Index.html
@@ -1,163 +1,131 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kits Generator Rust</title>
+    <title>Generador de Kits</title>
     <style>
         body {
-            font-family: 'Press Start 2P', sans-serif; /* Estilo gaming */
-            background-color: #1e1e1e; /* Fondo oscuro */
-            color: #fff; /* Texto claro */
-            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1b1b1b;
+            color: #fff;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
             padding: 20px;
         }
-
-        h1 {
+        .inventory {
+            display: none;
+            margin-top: 20px;
+        }
+        .inventory h3 {
             text-align: center;
-            font-size: 2.5em;
-            color: #FF4500; /* Naranja Rust */
-            text-shadow: 2px 2px 4px #000;
+            color: orange;
         }
-
-        label {
-            display: block;
-            margin: 10px 0 5px;
+        .inventory-section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
-
-        input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #333; /* Fondo de campos */
-            color: #fff;
-            font-size: 1em;
+        .slot {
+            width: 60px;
+            height: 60px;
+            border: 2px solid orange;
+            margin: 5px;
+            position: relative;
+            background-color: transparent;
         }
-
-        button {
-            background-color: #FF4500; /* Naranja Rust */
+        .slot img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+        .quantity {
+            position: absolute;
+            bottom: 2px;
+            right: 2px;
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
+            font-size: 12px;
+            padding: 2px 4px;
+            border-radius: 3px;
+        }
+        #item-image {
+            width: 100px;
+            height: 100px;
+            display: block;
+            margin: 10px 0;
+            background-color: white;
+        }
+        .kit-info-btn {
+            background-color: #ff6600;
+            color: white;
+            padding: 5px;
             cursor: pointer;
         }
-
-        button:hover {
-            background-color: #E53E00; /* Hover más oscuro */
-        }
-
-        #command_list, #kit_list {
-            margin-top: 20px;
+        .kit-box {
+            background-color: #333;
             padding: 10px;
-            background-color: #292929; /* Cuadro oscuro */
-            border: 2px solid #FF4500; /* Borde naranja */
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7); /* Sombra */
-        }
-
-        .kit-item {
-            background-color: #444; /* Fondo de cada comando */
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border: 1px solid #FF4500; /* Borde de comandos */
-        }
-
-        .kit-actions {
-            display: flex;
-            gap: 5px;
-        }
-
-        footer {
-            text-align: center;
-            color: #EAEAEA;
-            font-size: 0.8em;
-            margin-top: 40px;
-        }
-
-        /* Estilo para los botones de sección */
-        .section-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        /* Estilo para la imagen del ítem */
-        .item-image {
-            max-width: 100px;
             margin: 10px 0;
+            border: 1px solid orange;
+        }
+        .kit-box h4 {
+            margin: 0;
+        }
+        .buttons {
+            display: flex;
+            gap: 10px;
+        }
+        button {
+            background-color: orange;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #ff4500;
         }
     </style>
 </head>
 <body>
-    <h1>Kits Generator</h1>
 
-    <div class="section-buttons">
-        <button onclick="toggleKits()">VieraGuti Kits</button>
-    </div>
+<div class="container">
+    <h2>Generador de Kits</h2>
 
-    <label for="item_category">Select category:</label>
-    <select id="item_category" onchange="updateItemList()">
-        <option value="none">Select a category</option>
-        <option value="ammo">Ammo</option>
-        <option value="weapons">Weapons</option>
-        <option value="construction">Construction Items</option>
-        <option value="attire">Attire</option>
-        <option value="tools">Tools</option>
-        <option value="medsAndTeas">Meds and Teas</option>
-        <option value="trapsAndMiscellaneous">Traps and Miscellaneous</option>
-        <option value="components">Components</option>
-        <option value="electrical">Electrical</option>
+    <!-- Select item category -->
+    <label for="categories">Select a category:</label>
+    <select id="categories">
+        <option value="">Weapons</option>
+        <!-- Más categorías aquí -->
     </select>
 
-    <label for="item_list">Select an item:</label>
-    <select id="item_list" onchange="showItemDetails()">
-        <option value="none">Select an item</option>
-        <!-- Aquí se añadirán dinámicamente las opciones -->
+    <!-- Select item -->
+    <label for="items-list">Select an item:</label>
+    <select id="items-list">
+        <option value="undefined">undefined</option>
     </select>
 
-    <img id="item_image" class="item-image" src="" alt="Imagen del ítem" style="display:none;" />
+    <!-- Show selected item image -->
+    <img id="item-image" alt="Imagen del ítem">
 
-    <label for="kit_name">Enter the kit name or choose KaosBot:</label>
-    <input type="text" id="kit_name" placeholder="Write the name of the kit">
+    <!-- Kit name input -->
+    <label for="kit-name">Enter the kit name or choose KaosBot:</label>
+    <input type="text" id="kit-name" placeholder="Write the name of the kit">
 
-    <label for="kaosbot_kits">Select a KaosBot name:</label>
-    <select id="kaosbot_kits">
-        <option value="none">Select a kitname:</option>
+    <!-- KaosBot selection -->
+    <label for="kaosbot-names">Select a KaosBot name:</label>
+    <select id="kaosbot-names">
+        <option value="">Select a kitname:</option>
         <option value="freekit">freekit</option>
-        <option value="freekit2">freekit2</option>
-        <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit1</option>
-        <option value="elitekit2">elitekit2</option>
-        <option value="elitekit3">elitekit3</option>
-        <option value="elitekit4">elitekit4</option>
-        <option value="elitekit5">elitekit5</option>
-        <option value="elitekit6">elitekit6</option>
-        <option value="elitekit7">elitekit7</option>
-        <option value="elitekit8">elitekit8</option>
-        <option value="elitekit9">elitekit9</option>
-        <option value="elitekit10">elitekit10</option>
-        <option value="elitekit11">elitekit11</option>
-        <option value="elitekit12">elitekit12</option>
-        <option value="elitekit13">elitekit13</option>
-        <option value="elitekit14">elitekit14</option>
-        <option value="elitekit15">elitekit15</option>
-        <option value="elitekit16">elitekit16</option>
-        <option value="elitekit17">elitekit17</option>
-        <option value="elitekit18">elitekit18</option>
-        <option value="elitekit19">elitekit19</option>
-        <option value="elitekit20">elitekit20</option>
-        <option value="elitekit21">elitekit21</option>
-        <option value="elitekit22">elitekit22</option>
+        <!-- Más nombres KaosBot -->
     </select>
 
+    <!-- Item quantity -->
     <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" placeholder="Write the amount" min="1" value="1">
+    <input type="number" id="quantity" value="1">
 
+    <!-- Location -->
     <label for="location">Location:</label>
     <select id="location">
         <option value="Main">Main</option>
@@ -165,175 +133,111 @@
         <option value="Belt">Belt</option>
     </select>
 
-    <button onclick="generateCommand()">Add kit</button>
-    
-    <div id="kit_list"></div>
-    <div id="command_list"></div>
+    <!-- Add kit button -->
+    <button id="add-kit-btn">Add kit</button>
 
-    <script src="Items.js"></script>
-    <script>
-        const commands = [];
-        const predefinedKits = [
-            {
-                name: "Fullequip",
-                commands: [
-                    'Kit add "Fullequip" "metal.facemask" 1 1 "Wear"',
-                    'Kit add "Fullequip" "hoodie" 1 1 "Wear"',
-                    'Kit add "Fullequip" "metal.plate.torso" 1 1 "Wear"',
-                    'Kit add "Fullequip" "pants" 1 1 "Wear"',
-                    'Kit add "Fullequip" "roadsign.kilt" 1 1 "Wear"',
-                    'Kit add "Fullequip" "tactical.gloves" 1 1 "Wear"',
-                    'Kit add "Fullequip" "shoes.boots" 1 1 "Wear"',
-                    'Kit add "Fullequip" "rifle.ak" 1 1 "Belt"',
-                    'Kit add "Fullequip" "weapon.mod.holosight" 1 1 "Main"',
-                    'Kit add "Fullequip" "weapon.mod.lasersight" 2 1 "Main"',
-                    'Kit add "Fullequip" "weapon.mod.small.scope" 2 1 "Main"',
-                    'Kit add "Fullequip" "rifle.bolt" 1 1 "Belt"',
-                    'Kit add "Fullequip" "ammo.rifle" 420 1 "Main"',
-                    'Kit add "Fullequip" "syringe.medical" 14 1 "Belt"',
-                    'Kit add "Fullequip" "blueberries" 60 1 "Belt"',
-                    'Kit add "Fullequip" "barricade.wood.cover" 4 1 "Belt"',
-                    'Kit add "Fullequip" "bandage" 12 1 "Belt"',
-                    'Kit add "Fullequip" "pumpkin" 5 1 "Main"',
-                    'Kit add "Fullequip" "axe.salvaged" 1 1 "Main"',
-                    'Kit add "Fullequip" "jackhammer" 1 1 "Main"',
-                    'Kit add "Fullequip" "note" 1 1 "Main"',
-                    'Kit add "Fullequip" "lock.key" 1 1 "Main"'
-                ]
-            },
-            {
-                name: "BuzoDive",
-                commands: [
-                    'Kit add "BuzoDive" "diving.fins" 1 1 "Wear"',
-                    'Kit add "BuzoDive" "diving.mask" 1 1 "Wear"',
-                    'Kit add "BuzoDive" "diving.tank" 1 1 "Wear"',
-                    'Kit add "BuzoDive" "diving.wetsuit" 1 1 "Wear"',
-                    'Kit add "BuzoDive" "small.boat" 1 1 "Main"',
-                    'Kit add "BuzoDive" "submarine.torpedo" 10 1 "Main"',
-                    'Kit add "BuzoDive" "water.catcher.small" 1 1 "Main"',
-                    'Kit add "BuzoDive" "fishing.rod" 1 1 "Main"',
-                    'Kit add "BuzoDive" "bait.small" 20 1 "Main"',
-                    'Kit add "BuzoDive" "shark" 1 1 "Belt"',
-                    'Kit add "BuzoDive" "paddle" 1 1 "Belt"',
-                    'Kit add "BuzoDive" "spear.wood" 2 1 "Belt"'
-                ]
-            },
-            {
-                name: "Regalo",
-                commands: [
-                    'Kit add "Regalo" "cakefiveyear" 5 1 "Main"',
-                    'Kit add "Regalo" "supply.signal" 1 1 "Main"'
-                ]
-            }
-        ];
+    <!-- List of added kits -->
+    <div id="kit-list">
+        <div class="kit-box">
+            <h4>Fullequip</h4>
+            <div class="buttons">
+                <button class="kit-info-btn" data-kit="Fullequip">+info</button>
+                <button>Copy</button>
+                <button>Edit</button>
+                <button>Delete</button>
+            </div>
+        </div>
+        <!-- Más kits aquí -->
+    </div>
 
-        function updateItemList() {
-            const category = document.getElementById('item_category').value;
-            const itemList = document.getElementById('item_list');
-            itemList.innerHTML = '<option value="none">Select an item</option>';
-            if (category !== 'none') {
-                items[category].forEach(item => {
-                    const option = document.createElement('option');
-                    option.value = item.shortname;
-                    option.text = item.displayname;
-                    itemList.appendChild(option);
-                });
-            }
+    <!-- Inventory display -->
+    <div class="inventory" id="inventory">
+        <h3>Inventario</h3>
+
+        <!-- Wear section -->
+        <h4>Wear</h4>
+        <div class="inventory-section" id="wear-inventory">
+            <!-- Slots for wear (7 slots) -->
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <div class="slot"></div>
+        </div>
+
+        <!-- Main section -->
+        <h4>Main</h4>
+        <div class="inventory-section" id="main-inventory">
+            <!-- Slots for main (24 slots, 6x4) -->
+            <!-- 24 slots -->
+            <div class="slot"></div>
+            <div class="slot"></div>
+            <!-- Más slots hasta 24 -->
+        </div>
+
+        <!-- Belt section -->
+        <h4>Belt</h4>
+        <div class="inventory-section" id="belt-inventory">
+            <!-- Slots for belt (6 slots) -->
+            <div class="slot"></div>
+            <!-- 5 más -->
+        </div>
+
+        <button id="hide-inventory-btn">Hide Inventory</button>
+    </div>
+
+</div>
+
+<!-- Items.js -->
+<script>
+    // Placeholder items (replace with your actual Items.js data)
+    const items = [
+        { id: "rifle.ak", name: "AK-47", image: "images/ak47.png" },
+        { id: "ammo.rifle", name: "Rifle Ammo", image: "images/rifle_ammo.png" }
+        // Más ítems aquí...
+    ];
+
+    const selectElement = document.getElementById('items-list');
+    const imgElement = document.getElementById('item-image');
+
+    // Populate the item dropdown
+    items.forEach(item => {
+        const option = document.createElement('option');
+        option.value = item.id;
+        option.textContent = item.name;
+        selectElement.appendChild(option);
+    });
+
+    // Show selected item image
+    selectElement.addEventListener('change', function() {
+        const selectedItem = items.find(item => item.id === this.value);
+        if (selectedItem) {
+            imgElement.src = selectedItem.image;
+            imgElement.alt = selectedItem.name;
+        } else {
+            imgElement.src = '';
+            imgElement.alt = 'Imagen no disponible';
         }
+    });
 
-        function showItemDetails() {
-            const itemImage = document.getElementById('item_image');
-            const selectedItem = document.getElementById('item_list').value;
-            if (selectedItem !== 'none') {
-                itemImage.src = `images/${selectedItem}.png`; // Asume que las imágenes están en una carpeta 'images'
-                itemImage.style.display = 'block';
-            } else {
-                itemImage.style.display = 'none';
-            }
-        }
+    // Inventory interaction logic
+    const inventory = document.getElementById('inventory');
+    const inventoryButton = document.querySelectorAll('.kit-info-btn');
 
-        function displayCommands() {
-            const commandList = document.getElementById('command_list');
-            commandList.innerHTML = '';
-            commands.forEach(kit => {
-                const kitContainer = document.createElement('div');
-                kitContainer.className = 'kit-item';
-                kitContainer.innerHTML = `<strong>${kit.name}</strong><div class="kit-actions">
-                    <button onclick="copyKit('${kit.name}')">Copy</button>
-                    <button onclick="editKit('${kit.name}')">Edit</button>
-                    <button onclick="deleteKit('${kit.name}')">Delete</button>
-                </div>`;
-                commandList.appendChild(kitContainer);
-            });
-        }
+    inventoryButton.forEach(button => {
+        button.addEventListener('click', () => {
+            // Toggle inventory visibility
+            inventory.style.display = 'block';
+            // Load kit-specific data into inventory here...
+        });
+    });
 
-        function generateCommand() {
-            const kitName = document.getElementById('kit_name').value || document.getElementById('kaosbot_kits').value;
-            const shortName = document.getElementById('item_list').value;
-            const quantity = document.getElementById('quantity').value;
-            const location = document.getElementById('location').value;
+    document.getElementById('hide-inventory-btn').addEventListener('click', () => {
+        inventory.style.display = 'none';
+    });
+</script>
 
-            if (!kitName || shortName === "none" || !quantity) {
-                alert('Please complete all fields.');
-                return;
-            }
-
-            const command = `Kit add "${kitName}" "${shortName}" ${quantity} 1 "${location}"`;
-            const existingKit = commands.find(kit => kit.name === kitName);
-
-            if (existingKit) {
-                existingKit.commands.push(command);
-            } else {
-                commands.push({
-                    name: kitName,
-                    commands: [command]
-                });
-            }
-
-            localStorage.setItem('commands', JSON.stringify(commands));
-            displayCommands();
-            document.getElementById('item_list').value = 'none'; // Reiniciar la selección de ítems
-            showItemDetails(); // Limpiar detalles de ítem
-        }
-
-        function copyKit(kitName) {
-            const kit = commands.find(k => k.name === kitName);
-            const commandsString = kit.commands.join('\n');
-            navigator.clipboard.writeText(commandsString).then(() => {
-                alert('Kit copied to clipboard');
-            });
-        }
-
-        function editKit(kitName) {
-            // Implementa la lógica para editar el kit aquí
-        }
-
-        function deleteKit(kitName) {
-            const confirmation = confirm(`Vas a borrar toda la lista del kit ${kitName}. ¿Estás seguro?`);
-            if (confirmation) {
-                const kitIndex = commands.findIndex(k => k.name === kitName);
-                if (kitIndex > -1) {
-                    commands.splice(kitIndex, 1);
-                    displayCommands();
-                }
-            }
-        }
-
-        window.onload = function () {
-            const savedCommands = JSON.parse(localStorage.getItem('commands'));
-            if (savedCommands) {
-                savedCommands.forEach(kit => {
-                    commands.push(kit);
-                });
-                displayCommands();
-            }
-
-            // Mostrar los kits predeterminados al inicio
-            predefinedKits.forEach(kit => {
-                commands.push(kit);
-            });
-            displayCommands();
-        }
-    </script>
 </body>
 </html>
